--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,44 +2,51 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Archana Sharma
+  email:             archanasharmamusic@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-    Open `_data/authors.yml` to edit this text.
+    Archana Sharma is a student of Hindustani Classical Music and have been learning and performing from past 8 to 9 years. She has performed in various events in different parts of the country and her performances covers a variety of genre.
+
+    She is a versatile singer as her genre includes Bhajans, Ghazals, Semi-Classical, Bollywood and Sufi. She has also received many accolades for her musical performances.
+
+    She is associated with The Art of Living and is a Sumeru Sandhya Singer and also associated with NGO wherein she performs in fund raising events, events for the social cause, and events to spread awareness. 
+
+    She is also a Trainer/Teacher and trains people of all age groups from across the country and abroad. 
+
 
   # This photo will be used in the about section
   picture:
-    path:            https://via.placeholder.com/128x128
+    path:            /assets/img/logo.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
+      # 1x:            https://via.placeholder.com/128x128
+      # 2x:            https://via.placeholder.com/256x256
+       1x:            /assets/img/logo.png
+       2x:            /assets/img/logo.png
+
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           <mail@domain.tld>
+    # twitter:         <username>
+    # github:          <username>
+    email:           archanasharmamusic09@gmail.com
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:        Archanasharmamusicofficial
     # google:          <number>
     # vk:              <username>
-    # youtube:         <string_string_string>
+    youtube:         ArchanaSharmaMusic
     # vimeo:           <username>
     # vine:            <username>
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
+    instagram:       archanasharmamusic
+    whatsapp:        HRRBxZ76sbj5mKMBaW9VNJ
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
@@ -67,16 +74,16 @@ author1:
     # keybase          <username>
 
 # Another author (optional)
-author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
-  about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+# author2:
+#   name:              <firtname> <lastname>
+#   email:             <mail@domain.tld>
+#   about:             |
+#     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+#     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+#     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-    Open `_data/authors.yml` to edit this text.
+#     Open `_data/authors.yml` to edit this text.
 
-  picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
+#   picture:           https://placehold.it/128x128
+#   twitter:           <username>
+#   github:            <username>
