--- a/_data/social.yml
+++ b/_data/social.yml
@@ -27,6 +27,7 @@ instagram:
 whatsapp:
   name: WhatsApp
   icon: icon-whatsapp
+  prepend: 'https://chat.whatsapp.com/'
 spotify:
   name: Spotify
   icon: icon-spotify
@@ -58,7 +59,7 @@ rss:
 youtube:
   name: YouTube
   icon: icon-youtube
-  prepend: "https://www.youtube.com/channel/"
+  prepend: "https://www.youtube.com/"
 twitch:
   name: Twitch
   icon: icon-twitch
