--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ menu:
   #   url:               /docs/
   - title:             About
     url:               /about/
+  # - title:             Contact Me
+  #   url:               /contact/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -80,8 +82,8 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-# theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+# remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
