--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,13 +8,14 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Archana Sharma is a student of Hindustani Classical Music and have been learning and performing from past 8 to 9 years. She has performed in various events in different parts of the country and her performances covers a variety of genre.
+    Archana Sharma is a student of Hindustani Classical Music and has been learning under Guru Shishya Parampara for the past few years. She took her Initial Music training from Shri Vinay Mandal Ji (Delhi Gharana) and then She started learning from Vidhushi Meeta Pandit Ji, a renowned Classical Singer from Gwalior Gharana.
 
-    She is a versatile singer as her genre includes Bhajans, Ghazals, Semi-Classical, Bollywood and Sufi. She has also received many accolades for her musical performances.
+    She has been performing in various events in different parts of the country. She is a versatile singer as her genre includes Bhajans, Ghazals, Semi-Classical, Bollywood, and Sufi. She has also received many accolades for her musical performances. She has composed and released her own versions of Guru Paduka Strotram, Om Namah Shivaya Chanting, Hanuman Chalisa and beautiful Cover Versions on Youtube. 
 
-    She is associated with The Art of Living and is a Sumeru Sandhya Singer and also associated with NGO wherein she performs in fund raising events, events for the social cause, and events to spread awareness. 
+    She is associated with The Art of Living and is a Sumeru Sandhya Singer. She has also performed for different NGOs, fundraising events, events for social causes, and events to spread awareness.  
 
-    She is also a Trainer/Teacher and trains people of all age groups from across the country and abroad. 
+    She is a Trainer/Teacher and trains people of all age groups from across the country and abroad.
+
 
 
   # This photo will be used in the about section
