--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ menu:
     url:               /about/
   # - title:             Contact Me
   #   url:               /contact/
-  - title:             linktr.ee site
+  - title:             linktr.ee
     url:               https://linktr.ee/ArchanaSharmaMusic
 
 # Add links to the footer.
@@ -84,8 +84,8 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-# theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+# remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
