--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ menu:
   #   url:               /contact/
   - title:             linktr.ee
     url:               https://linktr.ee/ArchanaSharmaMusic
+  - title:              Media
+    url:                /media/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -84,8 +86,8 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-# theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+# remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
